# dv-tools

./: .gitignore  README.md
.github/workflows/: close-on-dev-merge.yml  mingoros-ci.yml  mingoros-release.yml  mingoros-studio-ci.yml
hesai-pcap2mcap/: Dockerfile  entrypoint.sh  run.sh  synth_atx_s01_correction.py
hesai-pcap2mcap/lichtblick/: hesai_pcap_replay.json
mingoros/: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SPIKE.md
mingoros/apps/mingoros-studio/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
mingoros/apps/mingoros-studio/src/: App.svelte  app.css  main.ts
mingoros/apps/mingoros-studio/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
mingoros/apps/mingoros-studio/src-tauri/capabilities/: default.json
mingoros/apps/mingoros-studio/src-tauri/src/: lib.rs  main.rs
mingoros/apps/mingoros-studio/src/lib/: api.ts  model.ts  recorderStore.svelte.ts  startup.ts  types.ts  updater.ts
mingoros/apps/mingoros-studio/src/lib/components/: AppBar.svelte  Checklist.svelte  Details.svelte  EbsControl.svelte  EchoViewer.svelte  FactCards.svelte  KillView.svelte  PipelineRoster.svelte  PneumaticDiagram.svelte  RawTopics.svelte  ResBar.svelte  SessionDebrief.svelte  SessionRecorder.svelte  StartupGuide.svelte  StateHero.svelte  StatusBanner.svelte  SteeringTest.svelte  TabBar.svelte  UpdateBanner.svelte
mingoros/apps/mingoros-studio/ui/: index.html
mingoros/crates/mingoros-cli/: Cargo.toml
mingoros/crates/mingoros-cli/src/: dashboard.html  main.rs
mingoros/crates/mingoros-core/: Cargo.toml
mingoros/crates/mingoros-core/src/: agent.rs  dashboard.rs  dv_contract.rs  lib.rs  msgs.rs  net.rs
mingoros/crates/mingoros-core/src/ros/: fake.rs  mod.rs  ros2.rs
mingoros/docs/: CONNECT.md  INSTALL.md  UPDATES.md
mingoros/examples/: commission-r2d.json
