[package]
name         = "mingoros-cli"
version      = "0.4.1"
description  = "ISC MingoROS CLI — ROS2 topic debugger for the IFS08 DV stack"
edition      .workspace = true
rust-version .workspace = true
license      .workspace = true
repository   .workspace = true
authors      .workspace = true

# The binary is `mingoros` (docs may alias it `mr`).
[[bin]]
name = "mingoros"
path = "src/main.rs"

[dependencies]
mingoros-core      .workspace = true
anyhow             .workspace = true
clap               .workspace = true
serde_json         .workspace = true
tracing            .workspace = true
tracing-subscriber .workspace = true

[features]
default = []
# Pull the real DDS transport into the core when built with this feature.
ros2 = ["mingoros-core/ros2"]
